@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-12T01:08:41Z",
+  "timestamp" : "2022-07-12T08:16:16Z",
   "count_outdated" : 385,
   "uniques_outdated" : 209,
   "count" : 417,
-  "uniques" : 225,
+  "uniques" : 226,
   "clones" : [
     {
       "timestamp": "2022-06-28T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-11T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-12T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
